fixed the RNV table size the readability is now way better with 27px fonts in Miso family. To achieve that, I had to use jQuery to remove the "width" setting in one of the <td> that come from RNV output. Also made a placeholder colum in the bootstrap layout for the future TODO list

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@
          url('../fonts/miso-regular-webfont.svg#misoregular') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 
@@ -21,7 +20,6 @@
          url('../fonts/miso-light-webfont.svg#misolight') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 @font-face {
@@ -33,7 +31,6 @@
          url('../fonts/miso-bold-webfont.svg#misobold') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
 
 /* Override some defaults */
@@ -134,11 +131,9 @@ h4{
 	background: orange;
 }
 
-.rnvtable {
-	font-size: 13px;
-}
-
 .rnvtable td {
+	font-family: Miso;
+	font-size: 27px;
 	padding: 2px 10px;
 	border-bottom: 1px solid #666;
 	color: #64CD0E;
